# MoBi_MultiOmic_Course

./: .gitignore  README.md
Docker_day1_day2/: Dockerfile  README.md
Docker_day1_day2/course/day1/: Day1_single_omics_practical.qmd  Genetics_mutationStatus.tsv  drugScreen.tsv  metadata.tsv
Docker_day1_day2/course/day2/: Day2_MOFA_practical.qmd
Docker_day1_day2/course/final_assignment/: gene_mutation.tsv  metadata.tsv
Docker_day3/: get_docker_image.md
day1/: Day1_single_omics_practical.qmd
day3/: Dockerfile
day3/00_prep_python_uv/: pyproject.toml
day3/00_prep_python_uv/notebooks/: R_interoperability.ipynb  biocstyle.scss  conda_python_setup.ipynb  pre_course.html  pre_course.qmd  prepare_python_uv_project.ipynb
day3/01_single_cell_processing/: pyproject.toml
day3/01_single_cell_processing/notebooks/: 01_single_cell_processing.ipynb  01_single_cell_processing.qmd  01_single_cell_processing_R.html  01_single_cell_processing_R.ipynb  01_single_cell_processing_R.qmd  book.scss
day3/02_batch_integration/: main.py  pyproject.toml
day3/02_batch_integration/notebooks/: 02_multi_sample_processing_executed.html  02_multi_sample_processing_executed.ipynb
day3/03_cite_seq/: pyproject.toml
day3/03_cite_seq/layouts/: 03_cite_seq_intro.grid.json
day3/03_cite_seq/notebooks/: 03_cite_seq_intro.ipynb  bioc.scss  biocstyle.scss
day3/04_cite_seq_application/: pyproject.toml
day3/04_cite_seq_application/notebooks/: cite_seq_task.html  cite_seq_task.ipynb
day3/04_cite_seq_application/prepare_data_scripts/: load_lasry2.py  load_lasry_data.R  prep_lasry.py
day3/05_sc_atac_seq/: pyproject.toml
day3/05_sc_atac_seq/notebooks/: sc_atac.ipynb
day3/XX_exam_data/: pyproject.toml
day3/XX_exam_data/data/: .~lock.Improved_Multi_Omics_Course_Schedule MN.docx#  Improved_Multi_Omics_Course_Schedule MN.docx
day3/XX_exam_data/notebooks/: download_covid_data.ipynb  download_covid_data.py  download_covid_data_ex.ipynb  exam_task.html  exam_task.ipynb
day3/conda_envs/: lecture__processing.yaml  lecture__r_interop.yaml
final_assignment/: AML_MOFA_exam_student_assignment.html  drug_auc.tsv
