[project]
name = "00-prep-python-uv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bioc2ri",
    "igraph>=1.0.0",
    "ipykernel>=7.2.0",
    "jupyterlab>=4.5.7",
    "leidenalg>=0.11.0",
    "nbconvert>=7.17.1",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "plotnine",
    "rpy2>=3.6.7",
    "scanpy>=1.12.1",
]

[tool.uv.sources]
bioc2ri = { git = "https://github.com/MaximilianNuber/bioc2ri.git" }
plotnine = { git = "https://github.com/has2k1/plotnine.git" }
