[project]
name = "03-cite-seq"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anndata>=0.12.12",
    "igraph>=1.0.0",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "jupyter-server>=2.18.2",
    "jupyterlab>=4.5.7",
    "marimo>=0.23.5",
    "matplotlib>=3.10.9",
    "mofaflex>=0.1.1",
    "mofapy2>=0.7.4",
    "mudata>=0.3.8",
    "muon>=0.1.7",
    "numpy>=2.4.4",
    "pandas>=2.3.3",
    "playwright>=1.59.0",
    "plotnine",
    "polars>=1.40.1",
    "ruff>=0.15.12",
    "scanpy>=1.12.1",
    "scvi-tools>=1.4.2",
    "seaborn>=0.13.2",
    "torch>=2.11.0",
]

[tool.uv.sources]
plotnine = { git = "https://github.com/has2k1/plotnine.git" }
