[project]
name = "aml-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "biocutils>=0.4.0",
    "delayedarray>=0.6.2",
    "dolomite-base>=0.5.1",
    "dolomite-sce>=0.3.0",
    "hdf5array>=0.5.0",
    "igraph>=1.0.0",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "jupyterlab>=4.5.7",
    "matplotlib>=3.10.9",
    "mopsy>=0.3.0",
    "nbconvert>=7.17.1",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "papermill>=2.7.0",
    "scanpy>=1.12.1",
    "scranpy>=0.3.0",
    "seaborn>=0.13.2",
    "singlecellexperiment>=0.6.2",
    "tiledbarray>=0.2.0",
    "pydeseq2",
    "decoupler",
    "rpy2>=3.6.7",
    "bioc2ri",
    "plotnine",
    "muon>=0.1.7",
    "marimo>=0.23.5",
]

[tool.uv.sources]
bioc2ri = { git = "https://github.com/MaximilianNuber/bioc2ri.git" }
plotnine = { git = "https://github.com/has2k1/plotnine.git" }
