[project]
name = "xx-exam-data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "geosketch>=1.3",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "jupyterlab>=4.5.7",
    "marimo>=0.23.6",
    "numpy>=2.4.4",
    "pandas>=3.0.3",
    "papermill>=2.7.0",
    "plotnine>=0.15.4",
    "polars>=1.40.1",
    "scanpy>=1.11.3",
]
